fix: удаляет overflow-y у direction-card

--- a/source/sass/blocks/direction-card.scss
+++ b/source/sass/blocks/direction-card.scss
@@ -9,7 +9,6 @@
   column-gap: size(26px);
   row-gap: size(70px);
   overflow-x: hidden;
-  overflow-y: scroll;
 
   @include vp-1023 {
     row-gap: 20px;
